# learning-solana

./: .gitignore
clients/: package.json
clients/src/hello_world/: execute.ts
clients/src/helpers/: solana.ts
projects/anchor-multisig/: Anchor.toml
projects/anchor-multisig/programs/anchor-multisig/: Cargo.toml
projects/anchor-multisig/programs/anchor-multisig/src/: action.rs  errors.rs  lib.rs  multisig.rs  proposal.rs
projects/anchor-multisig/tests/: anchor-multisig.ts  helpers.ts
projects/hello_world/: Cargo.toml
projects/hello_world/src/: lib.rs
projects/multisig/: Cargo.toml
projects/multisig/src/: lib.rs  multisig.rs  proposal.rs  storage.rs
projects/multisig/tests/: helpers.rs  multisig.rs  proposal.rs
projects/simple_token/: Cargo.toml
projects/simple_token/src/: errors.rs  instructions.rs  lib.rs  storage.rs
projects/simple_token/tests/: lib.rs
