[package]
name = "simple_token"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.10"
solana-program = "1.16.15"

[dev-dependencies]
solana-program-test = "1.16.15"
solana-sdk = "1.16.15"
